--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -25,9 +25,11 @@
     "@openavg/types": "workspace:*",
     "@pixi/layout": "^2.0.1",
     "@pixi/sound": "^6.0.1",
-    "@pixi/ui": "^2.1.5",
+    "@pixi/ui": "^2.2.1",
     "@tweenjs/tween.js": "^25.0.0",
-    "pixi-filters": "^6.0.5",
-    "pixi.js": "^8.4.1"
+    "dayjs": "^1.11.13",
+    "localforage": "^1.10.0",
+    "pixi-filters": "^6.1.0",
+    "pixi.js": "^8.8.0"
   }
 }
