--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,9 @@
 {
+  "editor.fontVariations": false,
+  "eslint.format.enable": true,
+  "eslint.codeActionsOnSave.rules": null,
+  // 禁用默认格式化工具（Prettier 或其他）
+  "editor.defaultFormatter": "dbaeumer.vscode-eslint",
   // Disable the default formatter, use eslint instead
   "prettier.enable": false,
   "editor.formatOnSave": false,
@@ -10,18 +15,18 @@
   },
 
   // Silent the stylistic rules in you IDE, but still auto fix them
-  "eslint.rules.customizations": [
-    { "rule": "style/*", "severity": "off", "fixable": true },
-    { "rule": "format/*", "severity": "off", "fixable": true },
-    { "rule": "*-indent", "severity": "off", "fixable": true },
-    { "rule": "*-spacing", "severity": "off", "fixable": true },
-    { "rule": "*-spaces", "severity": "off", "fixable": true },
-    { "rule": "*-order", "severity": "off", "fixable": true },
-    { "rule": "*-dangle", "severity": "off", "fixable": true },
-    { "rule": "*-newline", "severity": "off", "fixable": true },
-    { "rule": "*quotes", "severity": "off", "fixable": true },
-    { "rule": "*semi", "severity": "off", "fixable": true }
-  ],
+  // "eslint.rules.customizations": [
+  //   { "rule": "style/*", "severity": "off", "fixable": true },
+  //   { "rule": "format/*", "severity": "off", "fixable": true },
+  //   { "rule": "*-indent", "severity": "off", "fixable": true },
+  //   { "rule": "*-spacing", "severity": "off", "fixable": true },
+  //   { "rule": "*-spaces", "severity": "off", "fixable": true },
+  //   { "rule": "*-order", "severity": "off", "fixable": true },
+  //   { "rule": "*-dangle", "severity": "off", "fixable": true },
+  //   { "rule": "*-newline", "severity": "off", "fixable": true },
+  //   { "rule": "*quotes", "severity": "off", "fixable": true },
+  //   { "rule": "*semi", "severity": "off", "fixable": true }
+  // ],
 
   // Enable eslint for all supported languages
   "eslint.validate": [
@@ -33,6 +38,7 @@
     "html",
     "markdown",
     "json",
+    "json5",
     "jsonc",
     "yaml",
     "toml",
@@ -40,6 +46,7 @@
     "gql",
     "graphql",
     "astro",
+    "svelte",
     "css",
     "less",
     "scss",
