--- a/package.json
+++ b/package.json
@@ -24,27 +24,31 @@
   },
   "dependencies": {
     "@pixi/devtools": "^2.0.1",
-    "globals": "^15.9.0",
+    "globals": "^15.15.0",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^3.7.3",
-    "@eslint/js": "^9.9.0",
+    "@antfu/eslint-config": "^4.2.1",
+    "@eslint-react/eslint-plugin": "^1.26.2",
+    "@eslint/js": "^9.20.0",
     "@openavg/client": "workspace:*",
     "@openavg/core": "workspace:*",
     "@openavg/types": "workspace:*",
-    "@types/lodash": "^4.17.10",
-    "@types/node": "^22.7.4",
-    "@typescript-eslint/eslint-plugin": "^8.8.1",
-    "@typescript-eslint/parser": "^8.8.1",
-    "chalk": "^5.3.0",
-    "eslint": "^9.11.1",
+    "@types/lodash": "^4.17.15",
+    "@types/node": "^22.13.4",
+    "@typescript-eslint/eslint-plugin": "^8.24.1",
+    "@typescript-eslint/parser": "^8.24.1",
+    "@unocss/eslint-plugin": "^65.5.0",
+    "chalk": "^5.4.1",
+    "eslint": "^9.20.1",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
     "minimist": "^1.2.8",
     "npm-run-all": "^4.1.5",
-    "tsup": "^8.3.0",
-    "typescript": "^5.6.2",
-    "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.8",
-    "vitest": "^2.1.1"
+    "tsup": "^8.3.6",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.24.1",
+    "vite": "^5.4.14",
+    "vitest": "^2.1.9"
   }
 }
