--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -7,26 +7,24 @@
     "dev": "vite --mode staging",
     "mock": "vite --mode mock",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "@openavg/core": "workspace:*",
     "@openavg/types": "workspace:*",
-    "pixi.js": "^8.4.1",
+    "dayjs": "^1.11.13",
+    "pixi.js": "^8.8.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "unocss": "^0.63.2",
+    "unocss": "^0.63.6",
     "zustand": "5.0.0-rc.2"
   },
   "devDependencies": {
-    "@eslint/js": "^9.9.0",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "globals": "^15.9.0",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
+    "@vitejs/plugin-react-swc": "^3.8.0",
+    "globals": "^15.15.0",
+    "typescript": "^5.7.3",
+    "vite": "^5.4.14"
   }
 }
